create reminder för event driven quests
Event driven quests kan nu ha en reminder.
